[package]
name = "mirrorsite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
soup = "0.5"
log = "0.4"
env_logger = "0.9"
clap = "3.1"
